--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@lovable_dev" /><link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrYJAFdc9RfAYp853BKQkpuL79L6YwOLY7oA&s" />
   </head>
 
   <body>
